# hermes-fish-tts-plugin

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
examples/: config.snippet.yaml
fish_tts_plugin/: plugin.py  plugin.yaml
tests/: test_voice_bubble.py
