[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-fish-tts-plugin"
version = "0.1.0"
description = "Hermes Agent plugin that adds Fish Audio as a TTS provider without patching core files"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Tiese" }
]
dependencies = []

[project.entry-points."hermes_agent.plugins"]
fish_tts = "fish_tts_plugin"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["fish_tts_plugin*"]
